--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.qubole</groupId>
-  <artifactId>spark-sql-streaming-sqs_2.11</artifactId>
-  <version>0.5.2-SNAPSHOT</version>
+  <groupId>com.discovery</groupId>
+  <artifactId>spark-sql-streaming-sqs_2.12</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Spark SQL Streaming SQS</name>
   <description>Connector for faster reads from S3 using SQS</description>
-  <url>http://github.com/qubole/s3-sqs-connector</url>
+  <url>https://github.com/EurosportDigital/s3-sqs-connector</url>
 
   <developers>
     <developer>
@@ -60,9 +60,11 @@
 
   <properties>
     <sbt.project.name>spark-sql-streaming-sqs</sbt.project.name>
-    <spark.version>2.4.0</spark.version>
-    <scala.binary.version>2.11</scala.binary.version>
+    <spark.version>3.1.1</spark.version>
+    <scala.binary.version>2.12</scala.binary.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
